@@ -6,14 +6,19 @@
 
 package net.dries007.tfc.data;
 
-import java.util.Arrays;
-import java.util.Locale;
-import java.util.Map;
 import com.google.common.collect.ImmutableMap;
+import net.dries007.tfc.common.blocks.TFCBlocks;
+import net.dries007.tfc.common.blocks.rock.Ore;
+import net.dries007.tfc.common.blocks.wood.Wood;
+import net.dries007.tfc.common.fluids.SimpleFluid;
+import net.dries007.tfc.common.fluids.TFCFluids;
+import net.dries007.tfc.common.items.TFCItems;
+import net.dries007.tfc.util.Metal;
+import net.dries007.tfc.util.calendar.ICalendar;
+import net.dries007.tfc.util.data.FluidHeat;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
@@ -22,7 +27,6 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
@@ -35,137 +39,141 @@ import net.minecraft.world.level.material.Fluids;
 import net.neoforged.neoforge.common.crafting.CompoundIngredient;
 import org.jetbrains.annotations.Nullable;
 
-import net.dries007.tfc.common.blocks.TFCBlocks;
-import net.dries007.tfc.common.blocks.rock.Ore;
-import net.dries007.tfc.common.blocks.wood.Wood;
-import net.dries007.tfc.common.fluids.SimpleFluid;
-import net.dries007.tfc.common.fluids.TFCFluids;
-import net.dries007.tfc.common.items.TFCItems;
-import net.dries007.tfc.util.Helpers;
-import net.dries007.tfc.util.Metal;
-import net.dries007.tfc.util.calendar.ICalendar;
-import net.dries007.tfc.util.data.FluidHeat;
+import static net.dries007.tfc.util.Helpers.identifier;
+import static net.minecraft.core.registries.Registries.BLOCK;
+import static net.minecraft.core.registries.Registries.ITEM;
 
-public interface Accessors
-{
-    default Ingredient ingredientOf(Metal metal, Metal.ItemType type)
-    {
-        return type.isCommonTagPart()
-            ? Ingredient.of(commonTagOf(metal, type))
-            : Ingredient.of(TFCItems.METAL_ITEMS.get(metal).get(type).get());
+import java.util.Arrays;
+import java.util.Locale;
+import java.util.Map;
+
+public interface Accessors {
+
+    default Ingredient ingredientOf(Metal metal, Object type) {
+        if (type instanceof Metal.ItemType) {
+            return ((Metal.ItemType) type).isCommonTagPart()
+                ? Ingredient.of(commonTagOf(metal, (Metal.ItemType) type))
+                : Ingredient.of(TFCItems.METAL_ITEMS.get(metal).get(type).get());
+        } else if (type instanceof Metal.BlockType) {
+            return type == Metal.BlockType.BLOCK
+                ? Ingredient.of(storageBlockTagOf(ITEM, metal))
+                : Ingredient.of(TFCBlocks.METALS.get(metal).get(type).get());
+        }
+        throw new IllegalArgumentException("Unsupported type: " + type);
     }
 
-    default Ingredient ingredientOf(Metal metal, Metal.BlockType type)
-    {
-        return type == Metal.BlockType.BLOCK
-            ? Ingredient.of(storageBlockTagOf(Registries.ITEM, metal))
-            : Ingredient.of(TFCBlocks.METALS.get(metal).get(type).get());
-    }
-
-    default Ingredient ingredientOf(Ingredient... values)
-    {
+    default Ingredient ingredientOf(Ingredient... values) {
         return CompoundIngredient.of(values);
     }
 
-    default <T> TagKey<T> logsTagOf(ResourceKey<Registry<T>> registry, Wood wood)
-    {
-        return TagKey.create(registry, Helpers.identifier(wood.getSerializedName() + "_logs"));
+    default <T> TagKey<T> logsTagOf(ResourceKey<Registry<T>> registry, Wood wood) {
+        return TagKey.create(registry, identifier(wood.getSerializedName() + "_logs"));
     }
 
-    default TagKey<Item> commonTagOf(Metal metal, Metal.ItemType type)
-    {
+    default TagKey<Item> commonTagOf(Metal metal, Metal.ItemType type) {
         assert type.isCommonTagPart() : "Non-typical use of tag for " + metal.getSerializedName() + " / " + type.name();
         assert type.has(metal) : "Non-typical use of " + metal.getSerializedName() + " / " + type.name();
-        return commonTagOf(Registries.ITEM, type.name() + "s/" + metal.name());
+        return commonTagOf(ITEM, type.name() + "s/" + metal.name());
     }
 
-    default <T> TagKey<T> storageBlockTagOf(ResourceKey<Registry<T>> key, Metal metal)
-    {
+    default <T> TagKey<T> storageBlockTagOf(ResourceKey<Registry<T>> key, Metal metal) {
         assert metal.defaultParts() : "Non-typical use of a non-default metal " + metal.getSerializedName();
         return commonTagOf(key, "storage_blocks/" + metal.getSerializedName());
     }
 
-    default TagKey<Block> oreBlockTagOf(Ore ore, @Nullable Ore.Grade grade)
-    {
-        return commonTagOf(Registries.BLOCK, "ores/" + (ore.isGraded() ? ore.metal().name() : ore.name()) + (grade == null ? "" : "/" + grade.name()));
+    default TagKey<Block> oreBlockTagOf(Ore ore, @Nullable Ore.Grade grade) {
+        return commonTagOf(BLOCK, "ores/" + (ore.isGraded() ?
+            ore.metal().name() : ore.name()) + (grade == null ? "" : "/" + grade.name()));
     }
 
-    default <T> TagKey<T> commonTagOf(ResourceKey<Registry<T>> key, String name)
-    {
+    default <T> TagKey<T> commonTagOf(ResourceKey<Registry<T>> key, String name) {
         return TagKey.create(key, ResourceLocation.fromNamespaceAndPath("c", name.toLowerCase(Locale.ROOT)));
     }
 
-    default Item dyeOf(DyeColor color)
-    {
+    default Item dyeOf(DyeColor color) {
         return itemOf(ResourceLocation.withDefaultNamespace(color.getSerializedName() + "_dye"));
     }
 
-    default Item dyedOf(DyeColor color, String suffix)
-    {
+    default Item dyedOf(DyeColor color, String suffix) {
         return itemOf(ResourceLocation.withDefaultNamespace(color.getSerializedName() + "_" + suffix));
     }
 
-    default Item itemOf(ResourceLocation name)
-    {
+    default Item itemOf(ResourceLocation name) {
         assert BuiltInRegistries.ITEM.containsKey(name) : "No item '" + name + "'";
         return BuiltInRegistries.ITEM.get(name);
     }
 
-    default Fluid fluidOf(DyeColor color)
-    {
+    default Fluid fluidOf(DyeColor color) {
         return TFCFluids.COLORED_FLUIDS.get(color).getSource();
     }
 
-    default Fluid fluidOf(SimpleFluid fluid)
-    {
+    default Fluid fluidOf(SimpleFluid fluid) {
         return TFCFluids.SIMPLE_FLUIDS.get(fluid).getSource();
     }
 
-    default Fluid fluidOf(Metal metal)
-    {
+    default Fluid fluidOf(Metal metal) {
         return TFCFluids.METALS.get(metal).getSource();
     }
 
-    default String nameOf(Ingredient ingredient)
-    {
-        if (ingredient.getCustomIngredient() instanceof CompoundIngredient ing) return nameOf(ing.children().get(0));
-        final Ingredient.Value value = ingredient.getValues()[0];
-        if (value instanceof Ingredient.TagValue(TagKey<Item> tag)) return tag.location().getPath();
-        if (value instanceof Ingredient.ItemValue(ItemStack item)) return nameOf(item.getItem());
+//    default String nameOf(Ingredient ingredient) {
+//        if (ingredient.getCustomIngredient() instanceof CompoundIngredient(
+//            java.util.List<Ingredient> children
+//        )) return nameOf(children.getFirst());
+//        final Ingredient.Value value = ingredient.getValues()[0];
+//        if (value instanceof Ingredient.TagValue(TagKey<Item> tag)) return tag.location().getPath();
+//        if (value instanceof Ingredient.ItemValue(ItemStack item)) return nameOf(item.getItem());
+//        throw new AssertionError("Unknown ingredient value");
+//    }
+//
+//    default String nameOf(Fluid fluid) {
+//        assert fluid != Fluids.EMPTY : "Should never get name of Items.AIR";
+//        return BuiltInRegistries.FLUID.getKey(fluid).getPath();
+//    }
+//
+//    default String nameOf(ItemLike item) {
+//        assert item.asItem() != Items.AIR : "Should never get name of Items.AIR";
+//        assert item.asItem() != Items.BARRIER : "Should never get name of Items.BARRIER";
+//        return BuiltInRegistries.ITEM.getKey(item.asItem()).getPath();
+//    }
+    default String nameOf(Object orIngredient_orFluid_orItem) {
+        if (orIngredient_orFluid_orItem instanceof Ingredient ingredient) {
+            return Arrays.stream(ingredient.getValues())
+                .map(this::nameOfValue)
+                .findFirst()
+                .orElseThrow(() -> new AssertionError("Unknown ingredient value"));
+        } else if (orIngredient_orFluid_orItem instanceof Fluid fluid) {
+
+        }
+
+        throw new IllegalArgumentException("Unsupported object type: " + orIngredient_orFluid_orItem);
+    }
+
+    private String nameOfValue(Ingredient.Value value) {
+        if (value instanceof Ingredient.TagValue(TagKey<Item> tag)){
+            return tag.location().getPath();
+        } else if (value instanceof Ingredient.ItemValue(ItemStack item)) {
+            return BuiltInRegistries.ITEM.getKey(item.getItem().asItem()).getPath();
+        }
+
         throw new AssertionError("Unknown ingredient value");
     }
 
-    default String nameOf(Fluid fluid)
-    {
-        assert fluid != Fluids.EMPTY : "Should never get name of Items.AIR";
-        return BuiltInRegistries.FLUID.getKey(fluid).getPath();
-    }
-
-    default String nameOf(ItemLike item)
-    {
-        assert item.asItem() != Items.AIR : "Should never get name of Items.AIR";
-        assert item.asItem() != Items.BARRIER : "Should never get name of Items.BARRIER";
-        return BuiltInRegistries.ITEM.getKey(item.asItem()).getPath();
-    }
-
-    default int units(Metal.ItemType type)
-    {
-        return switch (type)
-        {
+    default int units(Metal.ItemType type) {
+        return switch (type) {
             case ROD -> 50;
-            default -> 100;
-            case DOUBLE_INGOT, SHEET, FISH_HOOK, FISHING_ROD, SWORD, SWORD_BLADE, MACE, MACE_HEAD, SHEARS, UNFINISHED_BOOTS -> 200;
-            case DOUBLE_SHEET, TUYERE, UNFINISHED_HELMET, UNFINISHED_CHESTPLATE, UNFINISHED_GREAVES, SHIELD, BOOTS -> 400;
+            case DOUBLE_INGOT, SHEET, FISH_HOOK, FISHING_ROD, SWORD, SWORD_BLADE, MACE, MACE_HEAD, SHEARS,
+                 UNFINISHED_BOOTS -> 200;
+            case DOUBLE_SHEET, TUYERE, UNFINISHED_HELMET, UNFINISHED_CHESTPLATE, UNFINISHED_GREAVES, SHIELD, BOOTS ->
+                400;
             case HELMET, GREAVES -> 600;
             case CHESTPLATE -> 800;
             case HORSE_ARMOR -> 1200;
+            default -> 100;
         };
     }
 
-    default int units(Metal.BlockType type)
-    {
-        return switch (type)
-        {
+    default int units(Metal.BlockType type) {
+        return switch (type) {
             case ANVIL -> 1400;
             case BLOCK, EXPOSED_BLOCK, WEATHERED_BLOCK, OXIDIZED_BLOCK, LAMP -> 100;
             case BLOCK_SLAB, EXPOSED_BLOCK_SLAB, WEATHERED_BLOCK_SLAB, OXIDIZED_BLOCK_SLAB -> 50;
@@ -176,63 +184,54 @@ public interface Accessors
         };
     }
 
-    default float temperatureOf(Metal metal)
-    {
-        return FluidHeat.MANAGER.getOrThrow(Helpers.identifier(metal.getSerializedName())).meltTemperature();
+    default float temperatureOf(Metal metal) {
+        return FluidHeat.MANAGER.getOrThrow(identifier(metal.getSerializedName())).meltTemperature();
     }
 
-    default int hours(int hours)
-    {
+    default int hours(int hours) {
         return hours * ICalendar.CALENDAR_TICKS_IN_HOUR;
     }
 
     /**
      * Given a {@code Map<T1, Map<T2, V1>>}, and a key {@code T2}, constructs a map of all the mappings of {@code T1} to maps which contain
      * an entry for the given key {@code T2}
+     *
      * @return An immutable map, with iteration order given by iteration order of the input map
      */
-    default <T1, T2, V> Map<T1, V> pivot(Map<T1, Map<T2, V>> map, T2 key)
-    {
-        // This method must maintain a consistent, deterministic ordering, so we can't collect into a typical
-        // hash map - we must use an order-preserving map here - immutable map is the easiest way to do that
-        final ImmutableMap.Builder<T1, V> builder = new ImmutableMap.Builder<>();
-        for (Map.Entry<T1, Map<T2, V>> entry : map.entrySet())
-            if (entry.getValue().containsKey(key))
-                builder.put(entry.getKey(), entry.getValue().get(key));
-        return builder.build();
+    // This method must maintain a consistent, deterministic ordering, so we can't collect into a typical
+    // hash map - we must use an order-preserving map here - immutable map is the easiest way to do that
+    default <T1, T2, V> Map<T1, V> pivot(Map<T1, Map<T2, V>> map , T2 key) {
+        return map.entrySet().stream()
+            .filter(entry -> entry.getValue().containsKey(key))
+            .collect(ImmutableMap.toImmutableMap(Map.Entry::getKey,
+                entry -> entry.getValue().get(key)));
     }
 
-    default BlockGetter empty()
-    {
+    default BlockGetter empty() {
         return new BlockGetter() {
             @Nullable
             @Override
-            public BlockEntity getBlockEntity(BlockPos pos)
-            {
+            public BlockEntity getBlockEntity(BlockPos pos) {
                 return null;
             }
 
             @Override
-            public BlockState getBlockState(BlockPos pos)
-            {
+            public BlockState getBlockState(BlockPos pos) {
                 return Blocks.AIR.defaultBlockState();
             }
 
             @Override
-            public FluidState getFluidState(BlockPos pos)
-            {
+            public FluidState getFluidState(BlockPos pos) {
                 return Fluids.EMPTY.defaultFluidState();
             }
 
             @Override
-            public int getHeight()
-            {
+            public int getHeight() {
                 return 0;
             }
 
             @Override
-            public int getMinBuildHeight()
-            {
+            public int getMinBuildHeight() {
                 return 0;
             }
         };
